# climbing

./: .env  .gitignore  JWT_API_AUTH.md  OAUTH_SETUP.md  REFACTORING_SUMMARY.md  auth.py  config.py  dependencies.py  docker-compose.yml  list_users.py  main.py  main_redis.py  make_admin.py  makefile  migrate_to_redis.py  monitor_sessions.py  permissions.py  pyproject.toml  rate_limiter.py  readme.md  redis-schema.yml  redis.conf  redis_store.py  redis_store_backup.py  start.sh  sw-old.js  sw.js  user_integration.py  validation.py
.github/workflows/: deploy.yml
client/: albums.html  albums.txt  index.html
client/css/: styles.css
client/js/: albums.js
climbers/Ayelet/: details.json
climbers/Clara/: details.json
climbers/Gal/: details.json
climbers/Gefen/: details.json
climbers/Keren/: details.json
climbers/Liel/: details.json
climbers/Noga/: details.json
climbing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
middleware/: app_middleware.py  pretty_json_middleware.py
models/: api_models.py
routes/: admin.py  albums.py  auth.py  crew.py  management.py  memes.py  notifications.py  users.py  utilities.py
scripts/: generate_vapid_keys.py  list_users.py  make_admin.py  migrate_to_redis.py  monitor_sessions.py  redis_data_migration.py  redis_production_migration.sh  test_migration.py
server/: main.py
static/: admin-notifications.html  admin.html  albums.html  albums.json  albums.txt  crew.html  index.html  locations.html  manifest.json  memes.html  privacy.html
utils/: background_tasks.py  export_utils.py  logging_setup.py  metadata_parser.py
(+47 files in other folders)
