[project]
name = "climbing"
version = "1.0.0"
description = ""
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
    "pillow>=11.2.1",
    "gitpython>=3.1.44",
    "pygithub>=2.6.1",
    "python-multipart>=0.0.20",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "itsdangerous>=2.1.2",
    "redis>=5.0.0",
]
requires-python = ">=3.13"
